feat: added style to contact page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -23,10 +23,11 @@
 
   <hr>
 
-  <main>
+  <main id="contact">
     <form class="card">
       <fieldset>
-        <legend>Send me a message</legend>
+        <legend><h2>Send me a message</h2></legend>
+        <hr>
         <div>
           <label for="name">Name</label><br>
           <input type="text" name="name" id="name" required>
@@ -47,8 +48,9 @@
       </fieldset>
     </form>
 
-    <section class="card">
+    <section id="contact-info" class="card">
       <h2>Contact Information</h2>
+      <hr>
       <h3>
         <svg width="25px" height="25px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M4 7.00005L10.2 11.65C11.2667 12.45 12.7333 12.45 13.8 11.65L20 7" stroke="#000000" stroke-width="2"
