feat: add text content to projects page

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -35,20 +35,53 @@
       <hr>
       <div id="project-showcase">
         <article>
-          <h3>Project 1</h3>
-          <p>Project description</p>
+          <h3>Typing Game</h3>
+            <div class="content-picture">
+              <p>
+                Speed typing game made with React, Vite, and using the Quotable API. Gets a random quote for user to type
+                has dynamic feedback for mistakes and keeps track of speed in WPM.
+              </p>
+              <picture>
+                <img src="" alt="person typing on keyboard">
+              </picture>
+            </div>
         </article>
         <article>
-          <h3>Project 2</h3>
-          <p>Project description</p>
+          <h3>Predicting Diseases</h3>
+          <div class="content-picture">
+            <p>
+              Used machine learning models to predict the presence of eight critical diseases using a medical dataset.
+              By comparing multiple algorithms, we find which approaches most effectively identify disease outcomes.
+            </p>
+            <picture>
+              <img src="" alt="project picture">
+            </picture>
+          </div>
         </article>
         <article>
-          <h3>Project 3</h3>
-          <p>Project description</p>
+          <h3>Blackjack</h3>
+          <div class="content-picture">
+            <p>
+              Built a single-player GUI blackjack game using Java Swing. Implemented dealer logic and game state 
+              management with clear win/loss conditions.
+            </p>
+            <picture>
+              <img src="" alt="project picture">
+            </picture>
+          </div>
         </article>
         <article>
-          <h3>Project 4</h3>
-          <p>Project description</p>
+          <h3>To-Do List</h3>
+          <div class="content-picture">
+            <p>
+                Feature-rich Android to-do list app supporting task filtering, tagging, and recurring
+                tasks. Built collaboratively in Android Studio using Agile development practices to ensure 
+                continuous improvement and a polished final product.
+            </p>
+            <picture>
+              <img src="" alt="project picture">
+            </picture>
+          </div>
         </article>
       </div>
     </section>
