feat: add pictures for remaining projects

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -58,7 +58,11 @@
               By comparing multiple algorithms, we find which approaches most effectively identify disease outcomes.
             </p>
             <picture>
-              <img src="" alt="project picture">
+              <source type="image/webp" srcset="../images/model-thumbnail-200.webp 200w,
+                                                ../images/model-thumbnail-400.webp 400w">
+              <source type="image/jpeg" srcset="../images/model-thumbnail-200.jpg 200w,
+                                                ../images/model-thumbnail-400.jpg 400w">
+              <img src="../images/model-thumbnail-200.jpg" alt="screenshot of feature importance plot">
             </picture>
           </div>
         </article>
@@ -70,7 +74,11 @@
               management with clear win/loss conditions.
             </p>
             <picture>
-              <img src="" alt="project picture">
+              <source type="image/webp" srcset="../images/blackjack-thumbnail-200.webp 200w,
+                                                ../images/blackjack-thumbnail-400.webp 400w">
+              <source type="image/jpeg" srcset="../images/blackjack-thumbnail-200.jpg 200w,
+                                                ../images/blackjack-thumbnail-400.jpg 400w">
+              <img src="../images/blacjack-thumbnail-200.jpg" alt="playing blackjack">
             </picture>
           </div>
         </article>
@@ -83,7 +91,11 @@
                 continuous improvement and a polished final product.
             </p>
             <picture>
-              <img src="" alt="project picture">
+              <source type="image/webp" srcset="../images/to-do-thumbnail-200.webp 200w,
+                                                ../images/to-do-thumbnail-400.webp 400w">
+              <source type="image/jpeg" srcset="../images/to-do-thumbnail-200.jpg 200w,
+                                                ../images/to-do-thumbnail-400.jpg 400w">
+              <img src="../images/to-do-thumbnail-200.jpg" alt="to do list">
             </picture>
           </div>
         </article>
