--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="pages/about.html">About</a></li>
         <li><a href="pages/projects.html">Projects</a></li>
-        <li><a href="pages/contact.html">Contact</a></li>
+        <li><a href="pages/form-no-js.html">Contact No JS</a></li>
+        <li><a href="pages/form-with-js.html">Contact JS</a></li>
       </ul>
     </nav>
   </header>
