--- a/pages/projects.html
+++ b/pages/projects.html
@@ -18,12 +18,13 @@
     </div>
     <nav>
       <input type="checkbox" id="hamburger">
-      <div id="hamburger-items">
-        <a href="../index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="projects.html">Projects</a>
-        <a href="contact.html">Contact</a>
-      </div>
+      <ul id="hamburger-items">
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="form-no-js.html">Contact No JS</a></li>
+        <li><a href="form-with-js.html">Contact JS</a></li>
+      </ul>
     </nav>
   </header>
 
