refactor: add id to main in home
separate home specific styles into main#home

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <hr>
 
-  <main>
+  <main id="home">
     <section id="landing-section">
       <h2>Welcome!</h2>
       <p>I'm a Computer Science major at UC San Diego. I specialize in front-end web
