--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
-
   <link rel="icon" href="images/icons8-laptop-16.png" type="image/png">
   <link rel="stylesheet" href="/styles/style.css">
+  <script src="scripts/script.js" defer></script>
 </head>
 
 <body>
@@ -25,6 +25,7 @@
         <li><a href="pages/projects.html">Projects</a></li>
         <li><a href="pages/form-no-js.html">Contact No JS</a></li>
         <li><a href="pages/form-with-js.html">Contact JS</a></li>
+        <li><button id="theme-toggle">Switch Theme</button></li>
       </ul>
     </nav>
   </header>
@@ -32,6 +33,9 @@
   <hr>
 
   <main id="home">
+    <noscript>
+      <p>JavaScript is disabled! Site will use your browser's preferred theme.</p>
+    </noscript>
     <section id="landing-section">
       <h2>Welcome!</h2>
       <p>I'm a Computer Science major at UC San Diego. I specialize in front-end web
