--- a/pages/form-with-js.html
+++ b/pages/form-with-js.html
@@ -7,6 +7,7 @@
   <title>Contact</title>
   <link rel="icon" href="../images/icons8-laptop-16.png" type="image/png">
   <link rel="stylesheet" href="../styles/style.css">
+  <script src="../scripts/script.js" defer></script>
 </head>
 
 <body>
@@ -24,6 +25,7 @@
         <li><a href="projects.html">Projects</a></li>
         <li><a href="form-no-js.html">Contact No JS</a></li>
         <li><a href="form-with-js.html">Contact JS</a></li>
+        <li><button id="theme-toggle">Switch Theme</button></li>
       </ul>
     </nav>
   </header>
