--- a/pages/projects.html
+++ b/pages/projects.html
@@ -7,6 +7,7 @@
   <title>Projects</title>
   <link rel="icon" href="../images/icons8-laptop-16.png" type="image/png">
   <link rel="stylesheet" href="../styles/style.css">
+  <script src="../scripts/script.js" defer></script>
 </head>
 
 <body>
@@ -24,6 +25,7 @@
         <li><a href="projects.html">Projects</a></li>
         <li><a href="form-no-js.html">Contact No JS</a></li>
         <li><a href="form-with-js.html">Contact JS</a></li>
+        <li><button id="theme-toggle">Switch Theme</button></li>
       </ul>
     </nav>
   </header>
@@ -37,19 +39,20 @@
       <div id="project-showcase">
         <article>
           <h3>Typing Game</h3>
-            <div class="project-content">
-              <p>
-                Speed typing game made with React, Vite, and using the Quotable API. Gets a random quote for user to type
-                has dynamic feedback for mistakes and keeps track of speed in WPM.
-              </p>
-              <picture>
-                <source type="image/webp" srcset="../images/typing-game-thumbnail-200.webp 200w,
+          <div class="project-content">
+            <p>
+              Speed typing game made with React, Vite, and using the Quotable API. Gets a random quote for user to type
+              has dynamic feedback for mistakes and keeps track of speed in WPM.
+            </p>
+            <picture>
+              <source type="image/webp" srcset="../images/typing-game-thumbnail-200.webp 200w,
                                                   ../images/typing-game-thumbnail-400.webp 400w">
-                <source type="image/jpeg" srcset="../images/typing-game-thumbnail-200.jpg 200w,
+              <source type="image/jpeg" srcset="../images/typing-game-thumbnail-200.jpg 200w,
                                                   ../images/typing-game-thumbnail-400.jpg 400w">
-                <img src="../images/typing-game-thumbnail-200.jpg" alt="screenshot of quote, feedback to typing, and input from tryping game">
-              </picture>
-            </div>
+              <img src="../images/typing-game-thumbnail-200.jpg"
+                alt="screenshot of quote, feedback to typing, and input from tryping game">
+            </picture>
+          </div>
         </article>
         <article>
           <h3>Predicting Diseases</h3>
@@ -71,7 +74,7 @@
           <h3>Blackjack</h3>
           <div class="project-content">
             <p>
-              Built a single-player GUI blackjack game using Java Swing. Implemented dealer logic and game state 
+              Built a single-player GUI blackjack game using Java Swing. Implemented dealer logic and game state
               management with clear win/loss conditions.
             </p>
             <picture>
@@ -87,9 +90,9 @@
           <h3>To-Do List</h3>
           <div class="project-content">
             <p>
-                Feature-rich Android to-do list app supporting task filtering, tagging, and recurring
-                tasks. Built collaboratively in Android Studio using Agile development practices to ensure 
-                continuous improvement and a polished final product.
+              Feature-rich Android to-do list app supporting task filtering, tagging, and recurring
+              tasks. Built collaboratively in Android Studio using Agile development practices to ensure
+              continuous improvement and a polished final product.
             </p>
             <picture>
               <source type="image/webp" srcset="../images/to-do-thumbnail-200.webp 200w,
