remove: remove form no js and rename form to contact

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="pages/about.html">About</a></li>
         <li><a href="pages/projects.html">Projects</a></li>
-        <li><a href="pages/form-no-js.html">Contact No JS</a></li>
-        <li><a href="pages/form-with-js.html">Contact JS</a></li>
+        <li><a href="pages/contact.html">Contact</a></li>
         <li><button id="theme-toggle">Switch Theme</button></li>
       </ul>
     </nav>
