--- a/pages/about.html
+++ b/pages/about.html
@@ -23,8 +23,7 @@
         <li><a href="../index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="projects.html">Projects</a></li>
-        <li><a href="form-no-js.html">Contact No JS</a></li>
-        <li><a href="form-with-js.html">Contact JS</a></li>
+        <li><a href="contact.html">Contact</a></li>
         <li><button id="theme-toggle">Switch Theme</button></li>
       </ul>
     </nav>
