feat: add source elements to picture in project-card

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -36,7 +36,7 @@
     <section id="project-showcase">
         <project-card
           title="Typing Game"
-          img="../images/typing-game-thumbnail-400.webp"
+          img="../images/typing-game-thumbnail"
           img-alt="playing typing game"
           desc="Speed typing game made with React, Vite, and using
             the Quotable API. Gets a random quote for user to type
@@ -45,7 +45,7 @@
         </project-card>
         <project-card
           title="Predicting Diseases"
-          img="../images/model-thumbnail-400.webp"
+          img="../images/model-thumbnail"
           img-alt="feature importance plot"
           desc="Used machine learning models to predict the presence of eight
             critical diseases using a medical dataset. By comparing multiple
@@ -55,7 +55,7 @@
         </project-card>
         <project-card
           title="Blackjack"
-          img="../images/blackjack-thumbnail-400.webp"
+          img="../images/blackjack-thumbnail"
           img-alt="playing blackjack"
           desc="Built a single-player GUI blackjack game using Java Swing.
             Implemented dealer logic and game state management with clear
@@ -64,7 +64,7 @@
         </project-card>
         <project-card
           title="To-Do List"
-          img="../images/to-do-thumbnail-400.webp"
+          img="../images/to-do-thumbnail"
           img-alt="to-do list"
           desc="Feature-rich Android to-do list app supporting task
             filtering, tagging, and recurring tasks. Built collaboratively
