feat: add local buttons and style

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -33,6 +33,10 @@
   <hr>
 
   <main id="projects">
+    <section id="load-buttons">
+      <button>Load Local</button>
+      <button>Load Remote</button>
+    </section>
     <section id="project-showcase">
     </section>
   </main>
