feat: add load-remote functionality

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -34,8 +34,8 @@
 
   <main id="projects">
     <section id="load-buttons">
-      <button>Load Local</button>
-      <button>Load Remote</button>
+      <button id="load-local">Load Local</button>
+      <button id="load-remote">Load Remote</button>
     </section>
     <section id="project-showcase">
     </section>
