--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="pages/about.html">About</a></li>
         <li><a href="pages/projects.html">Projects</a></li>
+        <li><a href="pages/crud.html">Crud</a></li>
         <li><a href="pages/contact.html">Contact</a></li>
         <li><button id="theme-toggle">Switch Theme</button></li>
       </ul>
