--- a/pages/crud.html
+++ b/pages/crud.html
@@ -41,7 +41,7 @@
         </legend>
         <hr>
 
-        <label for="title" required>Title</label>
+        <label for="title">Title</label>
         <input type="text" name="title" id="title">
 
         <label for="image">Image URL</label>
@@ -60,6 +60,7 @@
           <button id="create-local">Create Local</button>
           <button id="create-remote">Create Remote</button>
         </div>
+        <output id="create-output"></output>
       </fieldset>
     </form>
     <form id="update-form" class="card" method="post">
@@ -69,7 +70,7 @@
         </legend>
         <hr>
 
-        <label for="title" required>Title</label>
+        <label for="title">Title</label>
         <input type="text" name="title" id="title">
 
         <label for="image">Image URL</label>
@@ -88,6 +89,7 @@
           <button id="update-local">Update Local</button>
           <button id="update-remote">Update Remote</button>
         </div>
+        <output id="update-output"></output>
       </fieldset>
     </form>
     <form id="remove-form" class="card" method="post">
@@ -97,13 +99,14 @@
         </legend>
         <hr>
 
-        <label for="title" required>Title</label>
+        <label for="title">Title</label>
         <input type="text" name="title" id="title">
 
         <div id="remove-buttons">
           <button id="remove-local">Remove Local</button>
           <button id="remove-remote">Remove Remote</button>
         </div>
+        <output id="remove-output"></output>
       </fieldset>
     </form>
   </main>
