feat: add update local project-card functionality

--- a/pages/crud.html
+++ b/pages/crud.html
@@ -73,6 +73,7 @@
 
         <label for="update-select">Select a Project</label>
         <select id="update-select" name="select">
+          <option value=""></option>
           <optgroup id="update-local-optgroup" label="Local"></optgroup>
           <optgroup id="update-remote-optgroup" label="Remote"></optgroup>
         </select>
@@ -107,6 +108,7 @@
 
         <label for="remove-select">Select a Project</label>
         <select id="remove-select">
+          <option value=""></option>
           <optgroup id="remove-local-optgroup" label="Local"></optgroup>
           <optgroup id="remove-remote-optgroup" label="Remote"></optgroup>
         </select>
