feat: add remove local project-card functionality

--- a/pages/crud.html
+++ b/pages/crud.html
@@ -107,7 +107,7 @@
         <hr>
 
         <label for="remove-select">Select a Project</label>
-        <select id="remove-select">
+        <select id="remove-select" name="select">
           <option value=""></option>
           <optgroup id="remove-local-optgroup" label="Local"></optgroup>
           <optgroup id="remove-remote-optgroup" label="Remote"></optgroup>
