feat: change heading for every page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <header>
     <div id="header-top">
-      <h1>Sebastian Diaz</h1>
+      <h1>Welcome</h1>
       <label for="hamburger">&#9776</label>
     </div>
     <nav>
