--- a/pages/crud.html
+++ b/pages/crud.html
@@ -15,7 +15,7 @@
 
   <header>
     <div id="header-top">
-      <h1>Sebastian Diaz</h1>
+      <h1>Crud</h1>
       <label for="hamburger">&#9776</label>
     </div>
     <nav>
