feat: change landing page content and style

--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
       <p>JavaScript is disabled! Site will use your browser's preferred theme.</p>
     </noscript>
     <section id="landing-section">
-      <h2>Welcome!</h2>
-      <p>I'm a Computer Science major at UC San Diego. I specialize in front-end web
-        development. I enjoy creating a variety of software and facing challenges.</p>
+      <h2>Hi, I'm Seb</h2>
+      <p>I'm a Computer Science major at UC San Diego and I specialize in front-end web
+        development. I enjoy creating a variety of software and learning new things through
+        challenging tasks.
+      </p>
       <div id="landing-pictures">
         <svg id="portrait-placeholder" aria-label="Portrait placeholder image" xmlns="http://www.w3.org/2000/svg"
           version="1.1" viewBox="0 0 250 250">
