--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         </svg>
         <img src="images/ucsd-seal.png" alt="ucsd seal logo" width="200">
       </div>
+      <a href="pages/about.html"><button>See More</button></a>
     </section>
 
   </main>
