feat: add content to about me section

--- a/pages/about.html
+++ b/pages/about.html
@@ -33,18 +33,51 @@
   <hr>
 
   <main id="about">
-    <section class="card">
+    <section class="card" id="about-me">
       <h2>About Me</h2>
       <hr>
-      <p>Stuff about me...</p>
+      <p>
+        Hello visitor. I am Sebastian Diaz, the only Mexican who enjoys both Computer Science
+        and Golf. I grew up in San Diego and I've always enjoyed using technology, wether that be
+        playing video games, learning something new, rotting my brain, or a combination of the above. 
+        Naturally, this led me to wanting to create something to put out on the web. I think the internet and
+        technology are great, within moderation of course, which is why I have also strived to
+        balance my use with some physical activity. I love to go on walks, hiking, playing sports
+        (especially golf), and resistance training. I strive to be a better version of myself every
+        day and to leave the world a better place. I hope to find like-minded people to work with,
+        learn from, and exchange thoughts.
+      </p>
+      <div>
+        <picture>
+          <source type="image/webp" srcset="../images/san-diego-200.webp 200w,
+            ../images/san-diego-400.webp 400w"">
+          <source type="image/jpeg" srcset="../images/san-diego-200.jpg 200w,
+            ../images/san-diego-400.jpg 400w">
+          <img src="../images/san-diego-400.jpg" alt="grand canyon">
+        </picture>
+        <picture>
+          <source type="image/webp" srcset="../images/golf-200.webp 200w,
+            ../images/golf-400.webp 400w"">
+          <source type="image/jpeg" srcset="../images/golf-200.jpg 200w,
+            ../images/golf-400.jpg 400w">
+          <img src="../images/golf-400.jpg" alt="golf ball on green near pin">
+        </picture>
+        <picture>
+          <source type="image/webp" srcset="../images/grand-canyon-200.webp 200w,
+            ../images/grand-canyon-400.webp 400w"">
+          <source type="image/jpeg" srcset="../images/grand-canyon-200.jpg 200w,
+            ../images/grand-canyon-400.jpg 400w">
+          <img src="../images/grand-canyon-400.jpg" alt="grand canyon">
+        </picture>
+      </div>
     </section>
 
     <div class="card-group">
       <section id="education" class="card">
         <h2>Education</h2>
         <hr>
-        <span><em>University of California, San Diego</em></span>
-        <span>Expected graduation in <strong>June 2026</strong></span>
+        <p><em>University of California, San Diego</em></p>
+        <p>Expected graduation in <strong>June 2026</strong></p>
         <article>
           <h3>Course Work</h3>
           <p>Web Development, Operating Systems, Databases, Data Structures, Algorithms, Software Engineering,
